[package]
name = "xtfee-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.21.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time", "signal"] }
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch ="polkadot-v0.9.23"}
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
serde = "1.0.137"
primitive-types = { version = "0.11.1", features = ["impl-serde"] }
plotters = "0.3.1"
rand = "0.6"
clap = { version = "3.2.4", features = ["derive"] }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"pallet-transaction-payment/std",
]
